--- a/Fuentes/AutoCorreccionJava_TFG/webroot/css/custom.css
+++ b/Fuentes/AutoCorreccionJava_TFG/webroot/css/custom.css
@@ -1,3 +1,12 @@
 .navbar{
   margin-bottom: 0px;
 }
+
+.page-header {
+    text-align: center;
+    background-color: #eee;
+}
+
+.div-reportes {
+  text-align: center;
+}
