--- a/Fuentes/AutoCorreccionJava_TFG/webroot/css/custom.css
+++ b/Fuentes/AutoCorreccionJava_TFG/webroot/css/custom.css
@@ -3,10 +3,46 @@
 }
 
 .page-header {
-    text-align: center;
-    background-color: #eee;
+  text-align: center;
+  background-color: #eee;
 }
 
 .div-reportes {
   text-align: center;
+}
+
+.panelProfesor {
+  text-align: center;
+}
+
+a:focus, a:hover {
+    text-decoration: none;
+}
+
+h3 {
+  text-align: center;
+}
+
+a.thumbnail.active, a.thumbnail:focus, a.thumbnail:hover {
+    border-color: #337ab7;
+    border-radius: 50px;
+}
+
+.imgGraficas {
+    margin: 30px;
+}
+
+.divGraficas {
+    text-align: center;
+}
+
+.nav-tabs > li, .nav-pills > li {
+    float:none;
+    display:inline-block;
+    *display:inline; /* ie7 fix */
+     zoom:1; /* hasLayout ie7 trigger */
+}
+
+.nav-tabs, .nav-pills {
+    text-align:center;
 }
