Cambios en la aplicación:
- Añadidas nuevas pruebas unitarias y ficheros necesarios para ello.
- Añadida opción en la barra de navegación para cambiar el idioma de la
aplicación.
- Añadidos enlaces en la barra de navegación para poder acceder siempre
a los diferentes paneles del panel del profesor.
- Añadida internacionalización en la tabla de estadísticas del profesor.

--- a/Fuentes/AutoCorreccionJava_TFG/webroot/css/custom.css
+++ b/Fuentes/AutoCorreccionJava_TFG/webroot/css/custom.css
@@ -147,3 +147,11 @@ select {
   margin-left: 10em;
   width: 15%;
 }
+
+#panelInicio {
+  background: #01545B;
+}
+
+#cambiarIdioma {
+  background: #01545B;
+}
